# Nova07

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  compile_shaders.sh  license_header.txt  vcpkg.json  xmake.lua
.zed/: debug.json
resources/: sample_place.rbxlx  test.rbxl
shaders/: base.frag.hlsl  base.frag.spv  base.vert.hlsl  base.vert.spv  skybox.frag.hlsl  skybox.frag.spv  skybox.vert.hlsl  skybox.vert.spv
src/: main.cpp  ncc_main.cpp
src/Common/: BrickColors.hpp  Log.cpp  Log.hpp  MathTypes.hpp  PropertyValue.hpp
src/Engine/: Engine.cpp  Engine.hpp  Geometry.hpp  Nova.hpp  Renderer.hpp  TaskScheduler.hpp  Window.hpp
src/Engine/Common/: Signal.hpp
src/Engine/Enums/: Enums.hpp
src/Engine/Networking/: NetworkID.hpp  ReplicationProtocol.hpp
src/Engine/Objects/: BasePart.cpp  BasePart.hpp  Camera.hpp  Explosion.cpp  Explosion.hpp  Humanoid.cpp  Humanoid.hpp  Instance.cpp  Instance.hpp  InstanceFactory.hpp  JointInstance.cpp  JointInstance.hpp  LocalScript.cpp  LocalScript.hpp  Model.hpp  Part.hpp  Player.cpp  Player.hpp  RemoteEvent.cpp  RemoteEvent.hpp  RemoteFunction.cpp  RemoteFunction.hpp  Script.cpp  Script.hpp  Seat.hpp  Sky.hpp  SpawnLocation.hpp  SpecialMesh.hpp
src/Engine/Physics/: Assembly.hpp  ContactListener.cpp  ContactListener.hpp  JoltLayers.hpp  PhysicsManager_Assemblies.cpp  PhysicsManager_Explosions.cpp  PhysicsManager_Mutations.cpp
src/Engine/Reflection/: ClassDescriptor.cpp  ClassDescriptor.hpp  InstanceFactory.hpp  LevelLoader.cpp  LevelLoader.hpp  RegisterClasses.cpp  TypeMarshaling.hpp
src/Engine/Rendering/: Frustum.hpp  Geometry.hpp  Renderer.cpp  Renderer.hpp  Renderer_Pipeline.cpp  Renderer_Resources.cpp
src/Engine/Services/: DataModel.cpp  DataModel.hpp  Lighting.hpp  NetworkService.cpp  NetworkService.hpp  NetworkService_Packets.cpp  NetworkService_Replication.cpp  PhysicsService.cpp  PhysicsService.hpp  ScriptContext.cpp  ScriptContext.hpp  Workspace.cpp  Workspace.hpp
tests/: test_replication.cpp
